--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </li>
       </ul>
       <span class="navbar-text">
-        <a href="https://www.instagram.com/_aanushaaa" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="https://www.linkedin.com/in/your_username" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href="https://github.com/your_username" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.instagram.com/_aanushaa/" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/anusha-ashok-7a43b3267" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://github.com/am23101anusha" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-github fa-2x"></i></a>
       </span>
     </div>
   </nav>
@@ -82,7 +82,7 @@
     
     
       <section id="education">
-        <h2>Education</h2>
+        <div class="edutitle"><h2>Education</h2></div>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -103,7 +103,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5><mark>2023-2027</mark></h5>
                 <p><mark>Shibaura Institute of Technology</mark></p>
-                <p>Currently, I am in my first year second semester at Shibaura Institute of Technology. i am part of the Welfare and Human Engineering Lavoratory and my major is Biomedical Enginnering.</p>
+                <p>Currently, I am in my first year second semester at Shibaura Institute of Technology. i am part of the Welfare and Human Engineering Laboratory and my major is Biomedical Enginnering.</p>
                 <p>I've had the oppurtunity  to takepart in several oppurunities and develop my skills.I look forward to more. :)</em></p>
               </div>
             </div>
