Update  index.html

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </li>
       </ul>
       <span class="navbar-text">
-        <a href="https://www.instagram.com/_aanushaa/" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="https://www.linkedin.com/in/anusha-ashok-7a43b3267" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href="https://github.com/am23101anusha" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.instagram.com/_fvdvikvadfhaa/" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/avndfvhfjvoj67" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://github.com/vdfhoifjousha" target="_blank" class="nav-link d-inline p-0"><i class="fab fa-github fa-2x"></i></a>
       </span>
     </div>
   </nav>
@@ -70,17 +70,19 @@
       <div class="grid-container2">
         <div class="content">
           <h2>About Me</h2>
-          <p>Hi! My name is Anusha. I am in my first-year second semester at Shibaura Institute of Technology. I am part of the Welfare and Human Engineering Laboratory, and my major is Biomedical Engineering.I was born in India, and brought up in Tokyo. I've lived in Tokyo for more than 17 years now. I can speak English, Japanese, Hindi, and Tamil quite fluently. In India, I come from the Southern side, a state called Tamil Nadu. Please feel free to explore other areas on this portfolio webpage and don't hesitate to contact me.</p>
+          <p>Hi! My name is Anusha. I am in my first-year second semester at Shibaura Institute of Technology. I am part of the Welfare and Human Engineering Laboratory, and my major is Biomedical Engineering. I was born in India, and brought up in Tokyo. I've lived in Tokyo for more than 17 years now. I can speak English, Japanese, Hindi, and Tamil quite fluently. In India, I come from the Southern side, a state called Tamil Nadu. Please feel free to explore other areas on this portfolio webpage and don't hesitate to contact me.</p>
         </div>
         <div class="image">
           <img src="papa.jpg" alt="About Me Image">
         </div>
-        <div class="say-hi-box" onclick="sendEmail()"><button class="shadow__btn">say hi!</button></div>
+        <div class="say-hi-box" onclick="sendEmail()">
+          <button class="shadow__btn">say hi!</button>
+        </div>
       </div>
-      <div class="education-experience-container">
     </section>
     
     
+    <div class="education-experience-container">
       <section id="education">
         <div class="edutitle"><h2>Education</h2></div>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
